--- a/index.html
+++ b/index.html
@@ -38,11 +38,12 @@
                 <a class="brand" href="../">👶 Baby Yet?</a>
         </nav>
         <div class="inner">
-            <p>Has the baby come yet?</p>
-            <h3 class="title">Current status</h3>
+            <h3 class="title">Has the baby come yet?</h3>
             <div class="section">
-                <span id="status"></span>
-                <br>
+                <strong><span id="status"></span></strong>
+                <br />
+                <br />
+                <br />
                
                 <div class="row">
                     <div class="col is-full is-marginless is-center">
