--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 
 
             <footer>
+                We are updating this status every hour or so. Refresh for an updated status :-)
             </footer>
 
         </div>
