--- a/index.html
+++ b/index.html
@@ -41,12 +41,7 @@
             <div class="section">
                 <strong><span id="status"></span></strong>
                 <br /><br />
-                <small>Previous statuses</small>
-                <ul>
-                    <li><small><span id="last_status1"></span></small></li>
-                    <li><small><span id="last_status2"></span></small></li>
-                    <li><small><span id="last_status3"></span></small></li>
-                </ul>
+                <small>Previous status: <span id="last_status1"></span></small>
             </div>
             
             <div class="row">
