--- a/index.html
+++ b/index.html
@@ -42,10 +42,7 @@
                 <strong><span id="status"></span></strong>
                 <br />
                 <hr>
-                <small><i>Previous statuses</i></small>
-                <small><i><span id="last_status"></span></i></small>
-                <small><i><span id="last_status2"></span></i></small>
-                <small><i><span id="last_status3"></span></i></small>
+                <small><i><span id="last_status"></span>(previous status)</i></small>
             </div>
             
             <div class="row">
