--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
                 <strong><span id="status"></span></strong>
                 <br />
                 <hr>
-                <br />
-                <small><span id="container"></span></small>
+                <small><i><span id="last_status"></span> (previous status)</i></small>
             </div>
             
             <div class="row">
