--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <strong><span id="status"></span></strong>
                 <br />
                 <hr>
-                <small><i><span id="last_status"></span> (previous status)</i></small>
+                <small><i>Previously... <span id="last_status"></span></i></small>
             </div>
             
             <div class="row">
